[package]
name = "misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
blake3 = "1.3.1"
nlib = {path="../nlib"}
rand = "0.8.5"
xxhash-rust = {version="0.8.6",features=["xxh3"]}
z85 = "3.0.5"
base-x = "0.2.11"

[dependencies.neon]
path="../lib/neon/crates/neon"
default-features=false
features=["napi-latest","proc-macros","napi-runtime","napi-runtime","futures"]

[features]
main = []
