[package]
name = "svg2webp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
nlib = {path="../nlib"}
webp = "0.2.2"
tiny-skia = "0.6"
resvg = "0.23.0"
usvg = { version = "0.23.0", default-features = false }
image = "0.24.5"
anyhow = "1.0.68"
thiserror = "1.0.38"

[dependencies.neon]
path="../lib/neon/crates/neon"
default-features=false
features=["napi-latest","proc-macros","napi-runtime","napi-runtime","futures"]

[features]
main = []

